--- a/style.css
+++ b/style.css
@@ -212,7 +212,7 @@ section {
     justify-content: left;
 }
 
-.plank-see-chart-btn, .plank-see-chart-btn button {
+.plank-see-chart-btn {
     display: grid;
     align-items: center;
     justify-content: center;
@@ -220,7 +220,7 @@ section {
 
 .plank-see-chart-btn button {
     width: 100px!important;
-    transition: width 2s;
+    transition: none;
 }
 
 .sit-sel {
@@ -280,9 +280,9 @@ section {
 
 .sit-sel-chart-plank {
     grid-template-columns: 1fr 1fr 40px 5px 40px!important;
-    justify-content: center!important;
+    justify-content: left!important;
     align-items: center!important;
-    grid-column-gap: 5px!important;
+
 }
 
 .cardio-sel-div {
@@ -332,7 +332,7 @@ section {
     border-bottom: 1px solid white;
 }
 
-.colon {
+.colon, .plank-colon {
     color: white;
     margin-right: .3em;
     width: 40px!important;
@@ -446,6 +446,40 @@ input[type=range] {
   background-size: 30px 30px;
   overflow:visible;
   cursor: pointer;
+}
+
+.shuttle-slider::-moz-range-thumb {
+    width: 40px;
+    height: 40px;
+    border: 0;
+    background: url('running.png');
+    background-color:#f0f0f0;
+    z-index: 5;
+    background-position: center;
+    background-repeat: no-repeat;
+    border: 4px solid black;
+    border-radius: 50%;
+    background-size: 30px 30px;
+    overflow:visible;
+    cursor: pointer;
+}
+
+.shuttle-slider::-webkit-slider-thumb {
+    -webkit-appearance: none;
+    appearance: none;
+    width: 45px;
+    height: 45px;
+    border: 0;
+    background: url('running.png');
+    background-color:#f0f0f0;
+    z-index: 5;
+    background-position: center;
+    background-repeat: no-repeat;
+    border: 4px solid black;
+    border-radius: 50%;
+    background-size: 30px 30px;
+    overflow:visible;
+    cursor: pointer;
 }
 
 .push-slider::-webkit-slider-thumb {
