--- a/style.css
+++ b/style.css
@@ -568,5 +568,13 @@ input[type=range] {
 }
 
 .runlaps-row div {
-    margin: 1em;
+    margin: 1em 0;
+    display: grid;
+    justify-content: right;
+    align-content: start;
+}
+
+.runlaps-row div select {
+    width: 200px;
+    background-position: 170px center;
 }
