--- a/style.css
+++ b/style.css
@@ -39,12 +39,13 @@ section {
 }
 
 .info-section {
-  display: flex;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   background-color: #00BAF0;
-  background: linear-gradient(to right, #00ddff, #003a6df0);
+  background: linear-gradient(to right,#003a6df0, #00ddff, #003a6df0);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #FFF;
   height: 50px;
@@ -57,7 +58,8 @@ section {
     display: flex;
     flex-direction: row;
     list-style-type: none;
-    margin:0;
+    max-width: 400px;
+    margin:0 auto;
     padding:0;
 }
 
@@ -116,17 +118,14 @@ align-items: center;
   transform: rotate(-405deg);
 }
 
-@media (max-width: 700px) {
   .menu-button-container {
     display: flex;
   }
   .menu {
-    position: absolute;
-    top: 0;
-    margin-top: 50px;
-    left: 0;
+
     flex-direction: column;
     width: 100%;
+    max-width:400px;
     justify-content: center;
     align-items: center;
   }
@@ -137,8 +136,8 @@ align-items: center;
     border: 0;
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
   }
-  #menu-toggle:checked ~ .menu li {
-    border: 1px solid #333;
+  #menu-toggle:checked ~ #menu li {
+    border: 1px solid rgb(255, 255, 255);
     height: 2.5em;
     padding: 0.5em;
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
@@ -150,12 +149,12 @@ align-items: center;
     padding: 0.5em 0;
     width: 100%;
     color: white;
-    background-color: #222;
+    background-color: #003a6d;
   }
   .menu > li:not(:last-child) {
-    border-bottom: 1px solid #444;
+    border-bottom: 1px solid rgb(255, 255, 255);
   }
-}
+
 
 .info-btn button {
     cursor: pointer;
