--- a/style.css
+++ b/style.css
@@ -40,10 +40,10 @@ section {
 
 .info-section {
   display: grid;
-  grid-template-columns: 1fr 1fr;
-  flex-direction: row;
-  align-items: center;
+  grid-template-areas: "a b"
+                       "nav nav";
   justify-content: space-between;
+  grid-row-gap: 1em;
   background-color: #00BAF0;
   background: linear-gradient(to right,#003a6df0, #00ddff, #003a6df0);
   /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
@@ -51,21 +51,32 @@ section {
   height: 50px;
   padding: 1em;
 }
-
-
+.logo {
+    display: grid;
+    grid-area: a;
+}
+.menu-btn-container {
+    display: grid;
+    grid-area: b;
+    justify-content: end!important;
+}
 
 .menu {
+    justify-content: end;
     display: flex;
+    grid-area: nav;
     flex-direction: row;
     list-style-type: none;
     max-width: 400px;
     margin:0 auto;
     padding:0;
+    z-index: 1;
 }
 
 .menu > li {
-    margin: 0 1rem;
+    margin: 0;
     overflow: hidden;
+    cursor: pointer;
 }
 
 .menu-button-container {
@@ -74,7 +85,6 @@ height: 100%;
 width: 30px;
 cursor: pointer;
 flex-direction: column;
-justify-content: center;
 align-items: center;
 }
 
@@ -104,31 +114,33 @@ align-items: center;
   margin-top: 8px;
 }
 
-#menu-toggle:checked + .menu-button-container .menu-button::before {
+#menu-toggle:checked ~ .menu-btn-container .menu-button::before {
   margin-top: 0px;
   transform: rotate(405deg);
 }
 
-#menu-toggle:checked + .menu-button-container .menu-button {
+#menu-toggle:checked ~ .menu-btn-container .menu-button {
   background: rgba(3, 0, 190, 0);
 }
 
-#menu-toggle:checked + .menu-button-container .menu-button::after {
+#menu-toggle:checked ~ .menu-btn-container .menu-button::after {
   margin-top: 0px;
   transform: rotate(-405deg);
 }
 
   .menu-button-container {
-    display: flex;
+    display: grid;
+    justify-content: end;
   }
-  .menu {
 
+  .menu {
     flex-direction: column;
     width: 100%;
     max-width:400px;
-    justify-content: center;
+    justify-content: end;
     align-items: center;
   }
+
   #menu-toggle ~ .menu li {
     height: 0;
     margin: 0;
@@ -138,10 +150,11 @@ align-items: center;
   }
   #menu-toggle:checked ~ #menu li {
     border: 1px solid rgb(255, 255, 255);
-    height: 2.5em;
+    height: fit-content;
     padding: 0.5em;
     transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
   }
+
   .menu > li {
     display: flex;
     justify-content: center;
@@ -690,4 +703,19 @@ input[type=range] {
 .runlaps-row div select {
     width: 200px;
     background-position: 170px center;
+}
+
+#modal {
+    z-index: 2;
+}
+
+.close-btn {
+    cursor: pointer;
+    position: absolute;
+    color:black;
+    font-size:40px;
+    top: 10px;
+    left: 20px;
+    padding: 12px 16px;
+    z-index:1;
 }
