--- a/style.css
+++ b/style.css
@@ -163,6 +163,9 @@ align-items: center;
     width: 100%;
     color: white;
     background-color: #003a6d;
+    font-size: 2rem;
+    align-items: center;
+    text-align:center;
   }
   .menu > li:not(:last-child) {
     border-bottom: 1px solid rgb(255, 255, 255);
