--- a/style.css
+++ b/style.css
@@ -722,3 +722,65 @@ input[type=range] {
     padding: 12px 16px;
     z-index:1;
 }
+
+.install-modal {
+	width: 20rem;
+    color: white;
+    background-color: #003a6df0;
+	position: fixed;
+	top: -50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+    box-shadow: 0 0 1rem rgba(black, 0.1);
+	opacity: 0;
+	transition: opacity 550ms ease-in-out;
+    z-index: 2;
+    border: 1px solid white;
+}
+
+#apple-arrow {
+    width: 15px;
+    height: 25px;
+}
+
+  .modal__article {
+    text-align: center;
+    padding: 2.5rem;
+  }
+    .modal-title {
+      font-size: 1.25rem;
+      font-weight: 600;
+      margin-bottom: 0.75rem;
+    }
+
+  
+  footer {
+    width: 100%;
+    height: 3rem;
+  }
+  
+  .in {
+		opacity: 1;
+		top: 50%;
+	}
+
+
+.button {
+  font-weight: bold;
+  color: #fff;
+  padding: 15px 35px;
+  border: 2px solid #fff;
+  transition: all 250ms ease-in-out;
+  cursor: pointer;
+}
+  .button:hover {
+    color: #fff;
+    background-color: rgba(0, 0%, 100%, .2);
+  }
+  
+  .button-full {
+    background: linear-gradient(to right,#003a6df0, #00ddff, #003a6df0);
+    width: 100%;
+    height: 100%;
+  }
+
