--- a/style.css
+++ b/style.css
@@ -55,7 +55,10 @@ section {
 .logo {
     display: grid;
     grid-area: a;
+    font-weight: bolder;
+    font-size:1.2rem;
 }
+
 .menu-btn-container {
     display: grid;
     grid-area: b;
@@ -143,17 +146,17 @@ align-items: center;
   }
 
   #menu-toggle ~ .menu li {
-    height: 0;
+    max-height: 0;
     margin: 0;
     padding: 0;
-    border: 0;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    border: 0px solid white;
+    transition: max-height 200ms cubic-bezier(0.23, 1, 0.32, 1);
   }
   #menu-toggle:checked ~ #menu li {
     border: 1px solid rgb(255, 255, 255);
-    height: fit-content;
+    max-height: 500px;
     padding: 0.5em;
-    transition: height 400ms cubic-bezier(0.23, 1, 0.32, 1);
+    transition: max-height 200ms cubic-bezier(0.23, 1, 0.32, 1);
   }
 
   .menu > li {
